// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should render button variant of link 1`] = `
<div>
  <button
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="button"
    type="button"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      >
        Learn More
      </span>
    </span>
  </button>
</div>
`;

exports[`<Link /> should render disabled button variant of link 1`] = `
<div>
  <button
    aria-disabled="true"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 jpjrCc"
    data-blade-component="link"
    disabled=""
    role="button"
    type="button"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO iNDstP"
        data-blade-component="base-text"
      >
        Learn More
      </span>
    </span>
  </button>
</div>
`;

exports[`<Link /> should render link with default properties 1`] = `
<div>
  <a
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="link"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      >
        Learn More
      </span>
    </span>
  </a>
</div>
`;

exports[`<Link /> should render link with icon with default iconPosition 1`] = `
<div>
  <a
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="link"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="BaseBox-bmPWx gWIyMI"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      >
        Learn More
      </span>
    </span>
  </a>
</div>
`;

exports[`<Link /> should render link with icon with left iconPosition 1`] = `
<div>
  <a
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="link"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="BaseBox-bmPWx gWIyMI"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      >
        Learn More
      </span>
    </span>
  </a>
</div>
`;

exports[`<Link /> should render link with icon with right iconPosition 1`] = `
<div>
  <a
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="link"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      >
        Learn More
      </span>
      <span
        class="BaseBox-bmPWx dPeROr"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
  </a>
</div>
`;

exports[`<Link /> should render link with icon without text 1`] = `
<div>
  <a
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="link"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="BaseBox-bmPWx iEgatc"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      />
    </span>
  </a>
</div>
`;

exports[`<Link /> should render with small size 1`] = `
<div>
  <a
    aria-disabled="false"
    class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
    data-blade-component="link"
    role="link"
  >
    <span
      class="BaseBox-bmPWx fSbYvl content-container"
      data-blade-component="base-box"
    >
      <span
        class="BaseBox-bmPWx gWIyMI"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="12px"
          viewBox="0 0 24 24"
          width="12px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            data-blade-component="svg-path"
            fill="hsla(218, 89%, 51%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="StyledBaseText-dVBfTO jXCGsO"
        data-blade-component="base-text"
      >
        Learn More
      </span>
    </span>
  </a>
</div>
`;
